<resources>
    <string name="app_name">I-Care</string>

    <string name="sign_login">로그인</string>
    <string name="sign_signUp">회원가입</string>
    <string name="sign_id">아이디</string>
    <string name="sign_idCheck">중복확인</string>
    <string name="sign_pw">비밀번호</string>
    <string name="sign_rePw">비밀번호 재확인</string>
    <string name="sign_phone">전화번호</string>
    <string name="sign_camSerial">카메라 시리얼 번호</string>
    <string name="sign_email">이메일</string>
    <string name="sign_check">회원정보</string>
    <string name="sign_edit">회원정보 수정</string>
    
    <string name="privacyPolicy">개인정보 수집과 이용에 대한 동의</string>
    <string name="privacyPolicyDialog">
        개인정보 수집과 이용에 관한 동의를 받고자 합니다. 아래 보기에서 동의 여부를 선택해 주세요. \n\n
            수집하는 자: Icare \n
            개인정보 수집 및 이용 목적: 회원관리, 서비스 제공 \n
            수집하는 개인정보 항목: 이메일, 연락처 \n
            개인정보 보유 및 이용 기간: 수집 일로부터 300일 \n\n
            ※ 귀하께서는 동의하지 않을 권리가 있습니다. 동의하지 않을 경우 설문 보상 참여에서 제외됨을 알려드립니다.개인정보 수집과 이용에 동의하시나요?
    </string>

    <string name="camera_list">카메라 목록</string>
    <string name="btn_add">+</string>
    <string name="camera_item">카메라</string>
    <string name="camera_active">작동 중</string>
    <string name="camera_item_01">카메라01</string>
    <string name="camera_video_view">카메라 영상 확인</string>


    <string name="check">확인</string>
    <string name="cancel">취소</string>

    <string name="temperature">체온 데이터 대기 중…</string>
    <string name="video">영상 표시</string>

    <string name="navigation_drawer_open">네비게이션 드로어 열기</string>
    <string name="navigation_drawer_close">네비게이션 드로어 닫기</string>
    <string name="nav_home">홈</string>
    <string name="nav_gallery">갤러리</string>
    <string name="nav_slideshow">슬라이드쇼</string>
    <string name="todo">TODO</string>
    <string name="logo">LOGO</string>

</resources>