<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_edit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_edit"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/sign_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/sign_pw"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/sign_rePw"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/sign_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/sign_email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="saveEdit"
                android:text="@string/check" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="moveToBack"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>