<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/menu_color">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_check"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/sign_id"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/sign_id"-->
<!--                android:textSize="20sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/sign_user_id"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="aaa@naver.com"-->
<!--                android:textSize="20sp" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/sign_email"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_user_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="aaa@naver.com"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/sign_phone"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_user_phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="010-1234-5678"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:onClick="moveToPage"
            android:text="@string/sign_edit"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>